[package]
name = "lastfm-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

anyhow = "1"
dotenvy = "0.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sha2 = "0.10.9"
sha1 = "0.10.6"
current = "1.0.1"
deadpool-redis = "0.22.0"
